// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popup /> Should re-render et match the shapshot for hiding after calling setVisible(false) 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa sc-kGXeez gvkiBY"
    direction="normal"
    display="block"
  >
    <div
      class="Overlay-qtskko-0 fTghja"
      data-testid="overlay"
    />
    <div
      class="Wrapper-sc-1d51d2j-0 bIVduR"
    >
      Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Popup /> Should render and match the snapshot 1`] = `
<div
  class="sc-bdVaJa sc-kGXeez gvkiBY"
  direction="normal"
  display="block"
>
  <div
    class="Overlay-qtskko-0 fTghja"
    data-testid="overlay"
  />
  <div
    class="Wrapper-sc-1d51d2j-0 bIVduR"
  >
    Content
  </div>
</div>
`;
